manifests/pgadmin-deploy.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: pgadmin
  labels:
    app: pgadmin

spec:
  replicas: 1

  selector:
    matchLabels:
      app: pgadmin

  template:
    metadata:
      labels:
        app: pgadmin

    spec:
      containers:
        - name: pgadmin
          image: dpage/pgadmin4:latest
          ports:
            - containerPort: 80
