manifests/postgresql-deploy.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: postgresql
  labels:
    app: postgresql

spec:
  replicas: 1

  selector:
    matchLabels:
      app: postgresql

  template:
    metadata:
      labels:
        app: postgresql

    spec:
      containers:
        - name: postgresql
          image: postgres:17.10

          ports:
            - containerPort: 5432
