manifests/pgadmin-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: pgadmin-service

spec:
  type: ClusterIP

  selector:
    app: pgadmin

  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
