manifests/postgresql-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: postgre-service

spec:
  type: ClusterIP

  selector:
    app: postgresql

  ports:
    - protocol: TCP
      port: 80
      targetPort: 5432
