manifests/pgadmin-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pgadmin-ingress

spec:
  ingressClassName: nginx
  rules:
  - host: pgadminui.hotfix.space
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: pgadmin-service
            port: 
              number: 80
